fix spacing

--- a/src/toggle-switch/toggle-switch.scss
+++ b/src/toggle-switch/toggle-switch.scss
@@ -17,10 +17,6 @@
     color: rgba(t(iui-color-foreground-body-rgb), t(iui-opacity-2));
   }
 
-  > * + * {
-    margin-left: 0;
-  }
-
   // Disabled
   &.iui-disabled {
     cursor: not-allowed;
